роуты для user настроены

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["datasource"]
+  "cSpell.words": ["обязательны", "поля", "datasource", "jdenticon"],
+  "cSpell.language": "en,ru"
 }
